@@ -43,8 +43,8 @@ int CmdExtensions    (            Rules&,            const Extensions&);
 int CmdFill          (const CLI&, Rules&, Database&                   );
 int CmdGaps          (const CLI&, Rules&, Database&                   );
 int CmdGet           (const CLI&, Rules&, Database&                   );
-int CmdHelpUsage     (                                                );
-int CmdHelp          (const CLI&                                      );
+int CmdHelpUsage     (                               const Extensions&);
+int CmdHelp          (const CLI&,                    const Extensions&);
 int CmdJoin          (const CLI&, Rules&, Database&                   );
 int CmdLengthen      (const CLI&, Rules&, Database&                   );
 int CmdMove          (const CLI&, Rules&, Database&                   );
