@@ -268,7 +268,7 @@ int dispatchCommand (
 */
     else if (command == "gaps")        status = CmdGaps          (cli, rules, database            );
     else if (command == "get")         status = CmdGet           (cli, rules, database            );
-    else if (command == "help")        status = CmdHelp          (cli                             );
+    else if (command == "help")        status = CmdHelp          (cli,                  extensions);
     else if (command == "join")        status = CmdJoin          (cli, rules, database            );
     else if (command == "lengthen")    status = CmdLengthen      (cli, rules, database            );
     else if (command == "month")       status = CmdChartMonth    (cli, rules, database            );
